Background image changes and image names

--- a/about.html
+++ b/about.html
@@ -14,117 +14,119 @@
 </head>
 
 <body>
-    <header>
-        <h1>Meet Our Team</h1>
-    </header>
+    <div class="bg-wrapper">
+        <header>
+            <h1>Meet Our Team</h1>
+        </header>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="values.html">Values</a>
-        <a href="work.html">Our Work</a>
-    </nav>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
+            <a href="values.html">Values</a>
+            <a href="work.html">Our Work</a>
+        </nav>
 
-    <!--Add info about each person and maybe a picture of each person-->
-    <div class="columns">
-        <div class="column">
-            <div class="name-box">
-                <h3>Mason Hite</h3>
+        <!--Add info about each person and maybe a picture of each person-->
+        <div class="columns">
+            <div class="column">
+                <div class="name-box">
+                    <h3>Mason Hite</h3>
+                </div>
+                <div class="info-box">
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+                </div>
             </div>
-            <div class="info-box">
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+            <div class="column">
+                <div class="name-box">
+                    <h3>Daniel Hite</h3>
+                </div>
+                <div class="info-box">
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
 
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
 
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
 
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+                </div>
+            </div>
+            <div class="column">
+                <div class="name-box">
+                    <h3>Hudson Hite</h3>
+                </div>
+                <div class="info-box">
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+                </div>
             </div>
         </div>
-        <div class="column">
-            <div class="name-box">
-                <h3>Daniel Hite</h3>
-            </div>
-            <div class="info-box">
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
 
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
 
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-            </div>
-        </div>
-        <div class="column">
-            <div class="name-box">
-                <h3>Hudson Hite</h3>
-            </div>
-            <div class="info-box">
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-            </div>
-        </div>
+        <footer>
+            <p>&copy; <strong>2025 HiteWorks.com</strong></p>
+        </footer>
     </div>
-
-
-    <footer>
-        <p>&copy; <strong>2025 HiteWorks.com</strong></p>
-    </footer>
 </body>
 
 </html>
