--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>HiteWorks</h1>
         <h2>Bring Your Vision to Life</h2>
         <div class="image-wrapper">
-            <img src="images/upscalemedia-transformed.jpeg" alt="Landscaping image with windows into different vibrant projects">
+            <img src="images/index-image.jpeg" alt="Landscaping image with windows into different vibrant projects">
         </div>
         <h3>Professional Manual Labor, Small Construction, and Landscaping. </h3>
     </div>
