--- a/html/values.html
+++ b/html/values.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+    <header>
+        <h1>Values</h1>
+    </header>
+
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
@@ -21,10 +25,6 @@
         <a href="values.html">Values</a>
         <a href="work.html">Our Work</a>
     </nav>
-
-    <div id="nav-spacer"></div>
-
-    <h1>Values</h1>
 
     <section id="customer-value">
         <h2>Putting Customers First</h2>
