--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Hite Works offers a large selection of different Landscaping, Manual Labor, and Construction services! Competitive Pricing and professional service!" />
-    <link rel="stylesheet" href="index-styles.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/index-styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>HiteWorks | Landscaping, Manual Labor, and Construction</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="images/temp-favicon.png">
-    <link rel="icon" type="image/png" href="images/temp-favicon.png">
+    <link rel="icon" type="image/png" href="../images/temp-favicon.png">
+    <link rel="icon" type="image/png" href="../images/temp-favicon.png">
 </head>
 
 <body>
