Attempting to organize files (please work)

--- a/html/work.html
+++ b/html/work.html
@@ -11,16 +11,16 @@
         crossorigin="anonymous">
 
     <!--Global styles-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
     <!--Page-specific-->
-    <link rel="stylesheet" href="work-styles.css">
+    <link rel="stylesheet" href="../css/work-styles.css">
 
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 
     <!--Favicon-->
-    <link rel="icon" type="image/png" href="images/temp-favicon.png">
+    <link rel="icon" type="image/png" href="../images/temp-favicon.png">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
     </header>
 
     <nav>
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
@@ -42,19 +42,19 @@
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/temp-slide1.png" class="d-block w-100" alt="Paver pathway with colorful plants in beds around it">
+                    <img src="../images/temp-slide1.png" class="d-block w-100" alt="Paver pathway with colorful plants in beds around it">
                     <div class="carousel-caption">
                         <h5>Custom Pathway and Planting</h5>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/temp-slide2.png" class="d-block w-100" alt="Custom gazebo with an artificial pond with surrounding flower beds, maple trees, and fur trees">
+                    <img src="../images/temp-slide2.png" class="d-block w-100" alt="Custom gazebo with an artificial pond with surrounding flower beds, maple trees, and fur trees">
                     <div class="carousel-caption">
                         <h5>Custom Gazebo and Artifical Pond</h5>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/temp-slide3.png" class="d-block w-100" alt="Gravel pathway with mulch beds and native plants">
+                    <img src="../images/temp-slide3.png" class="d-block w-100" alt="Gravel pathway with mulch beds and native plants">
                     <div class="carousel-caption">
                         <h5>Gravel Pathway and Mulch Beds </h5>
                     </div>
