--- a/index.html
+++ b/index.html
@@ -6,25 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Hite Works offers a large selection of different Landscaping, Manual Labor, and Construction services! Competitive Pricing and professional service!" />
-    <link rel="stylesheet" href="../css/index-styles.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/index-styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>HiteWorks | Landscaping, Manual Labor, and Construction</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="../images/temp-favicon.png">
-    <link rel="icon" type="image/png" href="../images/temp-favicon.png">
+    <link rel="icon" type="image/png" href="images/temp-favicon.png">
 </head>
 
 <body>
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="values.html">Values</a>
-        <a href="work.html">Our Work</a>
+        <a href="html/about.html">About Us</a>
+        <a href="html/services.html">Services</a>
+        <a href="html/contact.html">Contact</a>
+        <a href="html/values.html">Values</a>
+        <a href="html/work.html">Our Work</a>
     </nav>
 
     <div class="nav-spacer"></div>
