--- a/html/about.html
+++ b/html/about.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HiteWorks | About Us</title>
-    <link rel="stylesheet" href="about-styles.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/about-styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="images/temp-favicon.png">
+    <link rel="icon" type="image/png" href="../images/temp-favicon.png">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     </header>
 
     <nav>
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
@@ -30,7 +30,7 @@
     <div class="columns">
         <div class="column">
             <div class="photo-wrapper">
-                <img src="images/filler-image.png" alt="Photo of Mason Hite">
+                <img src="../images/filler-image.png" alt="Photo of Mason Hite">
             </div>
             <div class="name-box">
                 <h3>Mason Hite</h3>
@@ -43,7 +43,7 @@
 
         <div class="column">
             <div class="photo-wrapper">
-                <img src="images/filler-image.png" alt="Photo of Daniel Hite">
+                <img src="../images/filler-image.png" alt="Photo of Daniel Hite">
             </div>
             <div class="name-box">
                 <h3>Daniel Hite</h3>
@@ -56,7 +56,7 @@
 
         <div class="column">
             <div class="photo-wrapper">
-                <img src="images/filler-image.png" alt="Photo of Hudson Hite">
+                <img src="../images/filler-image.png" alt="Photo of Hudson Hite">
             </div>
             <div class="name-box">
                 <h3>Hudson Hite</h3>
