--- a/html/contact.html
+++ b/html/contact.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Hite Works offers a large selection of different Landscaping, Manual Labor, and Construction services! Competitive Pricing and professional service!" />
-    <link rel="stylesheet" href="contact-styles.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/contact-styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>HiteWorks | Contact</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
     </header>
 
     <nav>
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
