--- a/html/services.html
+++ b/html/services.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <title>HiteWorks | Services</title>
-    <link rel="stylesheet" href="services-styles.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/services-styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/1f10ccfe66.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="images/temp-favicon.png">
+    <link rel="icon" type="image/png" href="../images/temp-favicon.png">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     </header>
 
     <nav>
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
