--- a/html/values.html
+++ b/html/values.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <title>HiteWorks | Values</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="values-styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/values-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="images/temp-favicon.png">
+    <link rel="icon" type="image/png" href="../images/temp-favicon.png">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     </header>
 
     <nav>
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
